<?xml version="1.0"?>
<package format="3">
  <name>lsm303_l3gd20_imu</name>
  <version>0.1.0</version>
  <description>Driver ROS 2 para LSM303DLHC (Accel+Mag) + L3GD20 (Gyro) vía I2C en Raspberry Pi.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- En paquetes Python puedes dejar ament_python como buildtool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

